--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class = "container" style="min-height:500px">
+<div class = "container sticky_footer">
   <h1>Pages#home</h1>
   <p>Find me in app/views/pages/home.html.erb</p>
 </div>
