--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
-<div class = "container sticky_footer">
-  <h1>Pages#home</h1>
-  <p>Find me in app/views/pages/home.html.erb</p>
+<div class = "container-fluid sticky_footer home-banner d-flex align-items-center  justify-content-center">
+  <div class="content-banner d-flex flex-column align-items-center ">
+    <h1 >Search an old car you'd like!</h1>
+    <button class="btn btn-primary btn-lg">Check our offers!</button>
+  </div>
 </div>
