tweeked index page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
         <a class="navbar-brand" href="#">
           <img src="https://static.vecteezy.com/system/resources/previews/000/372/191/original/red-hot-european-style-sports-car-cartoon-vector-illustration.jpg" />
         </a>
-        <h4>Drive my Car</h4>
+        <h3><strong>Drive my Car</strong></h3>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -42,7 +42,7 @@
       </div>
     </div>
     <%= yield %>
-    <div class="footer container-fluid mt-auto py-3 bg-light">
+    <div class="footer container-fluid mt-auto py-4 ">
       <div class="footer-links position-relative">
         <a href="#"><i class="fab fa-github"></i></a>
         <a href="#"><i class="fab fa-instagram"></i></a>
