--- a/app/assets/stylesheets/components/_car-index.scss
+++ b/app/assets/stylesheets/components/_car-index.scss
@@ -9,8 +9,22 @@ grid-gap: 16px;
   display: flex;
   padding: 5px;
   align-items: center;
-  border-radius: 10px;
+  border-radius: 5px;
+  transition: transform 0.2s ease;
+  text-decoration: none
 }
+
+.card-img-top {
+  width: 100%;
+  height: 15vw;
+  object-fit: fill;
+}
+
+.card:hover {
+  transform: scale(1.1);
+
+}
+
 .cards-display {
   width: 100%;
 }
@@ -18,6 +32,7 @@ grid-gap: 16px;
 .btn{
   align-items: left;
 }
+
 
 @media(max-width: 992px) {
   .container {
