--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,17 +1,14 @@
 <div class ="container sticky_footer">
-  <div class="container">
+  <div class="container" >
     <% @cars.each do |car| %>
-      <div class="card" style="width: 18rem;">
-        <img src="https://static.vecteezy.com/system/resources/previews/000/372/191/original/red-hot-european-style-sports-car-cartoon-vector-illustration.jpg" class="card-img-top" alt="...">
-        <h5 class="card-title"><%= car.model  %></h5>
-        <p class="card-text"><%= car.brand  %></p>
-        <div class="d-flex justify-content-between cards-display align-self-center">
-          <a href="#" class="btn btn-dark ">Check me</a>
-          <div class="mt-2">
-            <%="  #{car.price} €  "%>
-          </div>
-        </div>
+      <a href="#" class="card" style="width: 18rem;">
+      <%= image_tag "#{rand(9)}.jpg", class: 'card-img-top', id: 'identifier', style: 'width: 280px; height: 200px' %>
+      <h5 class="card-title"><strong><%= car.model  %></strong></h5>
+      <p class="card-text"><%= car.brand  %></p>
+      <div class="d-flex mt-2">
+          <h3><strong><%="#{car.price} € / day"%></h3></strong>
       </div>
+      </a>
     <% end %>
   </div>
 </div>
