--- a/app/assets/stylesheets/components/_car-index.scss
+++ b/app/assets/stylesheets/components/_car-index.scss
@@ -1,7 +1,7 @@
-.container {
-display: grid;
-grid-template-columns: 1fr 1fr 1fr 1fr;
-grid-gap: 16px;
+.cards-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 16px;
 
 }
 
@@ -25,13 +25,13 @@ grid-gap: 16px;
 }
 
 @media(max-width: 992px) {
-  .container {
+  .cards-container {
     grid-template-columns: 1fr 1fr;
   }
 }
 
 @media(max-width: 768px) {
-  .container {
+  .cards-container {
     grid-template-columns: 1fr;
   }
 }
