--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,5 +1,5 @@
 <div class ="container sticky_footer">
-  <div class="container" >
+  <div class="cards-container" >
     <% @cars.each do |car| %>
       <a href="#" class="card" style="width: 18rem;">
       <%= image_tag "#{rand(9)}.jpg", class: 'card-img-top', id: 'identifier', style: 'width: 280px; height: 200px' %>
