--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,10 @@
 <div class="footer container-fluid mt-auto py-4 ">
   <div class="footer-links position-relative">
-    <a href="#"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
+  <h2><i class="fas fa-quote-right"></i>Ride with us for an awesome experience</h2>
+    <%# <a href="#"><i class="fab fa-instagram"></i></a>
     <a href="#"><i class="fab fa-facebook"></i></a>
     <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
+    <a href="#"><i class="fab fa-linkedin"></i></a> %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
   </div>
