--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class = "container-fluid sticky_footer home-banner d-flex align-items-center  justify-content-center">
   <div class="content-banner d-flex flex-column align-items-center ">
     <h1 >Search an old car you'd like!</h1>
-    <button class="btn btn-primary btn-lg">Check our offers!</button>
+    <%= link_to "Check our offers!", cars_path, class:"btn btn-primary btn-lg"  %>
   </div>
 </div>
