--- a/app/views/cars/_carousel.html.erb
+++ b/app/views/cars/_carousel.html.erb
@@ -5,6 +5,13 @@
         <img src="https://images.unsplash.com/photo-1521657142174-c7353dc830cd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80" class="d-block w-100" alt="...">
       </div>
     </div>
+    <% if car.photo.attached?  %>
+      <div class="carousel-item">
+        <div class="carousel-inner-item">
+          <img src= "<%= car.photo.url %>", class="d-block w-100" alt="...">
+        </div>
+      </div>
+    <% end %>
     <div class="carousel-item">
       <div class="carousel-inner-item">
         <img src="https://images.unsplash.com/photo-1609007690087-b4f460ffac8d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" class="d-block w-100" alt="...">
