navbar improved further, link added to home and create new car

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="footer container-fluid mt-auto py-4 ">
   <div class="footer-links position-relative">
-  <h2><i class="fas fa-quote-right"></i>Ride with us for an awesome experience</h2>
+  <h5>Ride with us for an awesome experience</h5>
     <%# <a href="#"><i class="fab fa-instagram"></i></a>
     <a href="#"><i class="fab fa-facebook"></i></a>
     <a href="#"><i class="fab fa-twitter"></i></a>
