rental controller and routes added

--- a/app/views/cars/_booking.html.erb
+++ b/app/views/cars/_booking.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for(rental) do |f| %>
   <%= f.input :rental_begin %>
   <%= f.input :rental_end %>
-  <%= f.submit %>
+  <%= f.submit "Book me", class: 'btn btn-primary' %>
 <% end %>
