--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,11 +19,11 @@
             <% if user_signed_in? %>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  <%= link_to current_user.email, root_path, class:"nav-link" %>
+                  <%= current_user.email %>
                 </a>
                 <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                  <%= link_to "Profile", edit_user_registration_path, class:"dropdown-item" %>
-                  <%#= link_to "Dashboard", , class:"dropdown-item" %>
+                  <%= link_to "Edit User", edit_user_registration_path, class:"dropdown-item" %>
+                  <%= link_to "Dashboard", dashboard_path, class:"dropdown-item" %>
                   <%= link_to "Sign out", destroy_user_session_path, method: :delete, class:"dropdown-item" %>
                 </div>
               </li>
