--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,1 +1,35 @@
-<h1>HI</h1>
+<div class="sticky_footer d-flex flex-column container">
+  <div class="dashboard-container">
+    <h3 class="text-center mb-0">My cars</h3>
+    <div class="dashboard-card w-100 d-flex">
+      <% @cars.each do |car| %>
+        <div class="swipe-card" style="background-image: linear-gradient(to top, rgba(255,255,0,0), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1591552149543-0f98a83e9bcb?ixlib=rb-1.2.1&ixid=MnwxM[…]90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1232&q=80')">
+          <h5 class="card-brand"><strong><%= car.brand  %></strong></h5>
+          <p class="card-model"><%= car.model  %></p>
+        </div>
+      <% end %>
+    </div>
+  </div>
+  <div class="dashboard-container">
+    <h3 class="text-center mb-0">My rentals</h3>
+    <div class="dashboard-card w-100 d-flex">
+      <% @cars.each do |car| %>
+        <div class="swipe-card" style="background-image: linear-gradient(to top, rgba(255,255,0,0), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1591552149543-0f98a83e9bcb?ixlib=rb-1.2.1&ixid=MnwxM[…]90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1232&q=80')">
+          <h5 class="card-brand"><strong><%= car.brand  %></strong></h5>
+          <p class="card-model"><%= car.model  %></p>
+        </div>
+      <% end %>
+    </div>
+  </div>
+  <div class="dashboard-container">
+    <h3 class="text-center mb-0">My rent requests</h3>
+    <div class="dashboard-card w-100 d-flex">
+      <% @cars.each do |car| %>
+        <div class="swipe-card" style="background-image: linear-gradient(to top, rgba(255,255,0,0), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1591552149543-0f98a83e9bcb?ixlib=rb-1.2.1&ixid=MnwxM[…]90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1232&q=80')">
+          <h5 class="card-brand"><strong><%= car.brand  %></strong></h5>
+          <p class="card-model"><%= car.model  %></p>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
