--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,37 +7,39 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item active">
-            <%= link_to "Home", root_path, class:"nav-link" %>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item active">
+          <%= link_to "Home", root_path, class:"nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Add my car", new_car_path, class:"nav-link btn btn-info me-2" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Find a car", cars_path, class:"nav-link btn btn-info me-2" %>
+        </li>
+        <% if user_signed_in? %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <%= current_user.email %>
+            </a>
+            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+              <%= link_to "Edit User", edit_user_registration_path, class:"dropdown-item" %>
+              <%= link_to "Dashboard", dashboard_path, class:"dropdown-item" %>
+              <%= link_to "Sign out", destroy_user_session_path, method: :delete, class:"dropdown-item" %>
+            </div>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Sign in", new_user_session_path, class:"nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "New car", new_car_path, class:"nav-link btn btn-primary" %>
+            <%= link_to "Sign up", new_user_registration_path, class:"nav-link" %>
           </li>
-            <% if user_signed_in? %>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  <%= current_user.email %>
-                </a>
-                <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                  <%= link_to "Edit User", edit_user_registration_path, class:"dropdown-item" %>
-                  <%= link_to "Dashboard", dashboard_path, class:"dropdown-item" %>
-                  <%= link_to "Sign out", destroy_user_session_path, method: :delete, class:"dropdown-item" %>
-                </div>
-              </li>
-            <% else %>
-              <li class="nav-item">
-                <%= link_to "Sign in", new_user_session_path, class:"nav-link" %>
-              </li>
-              <li class="nav-item">
-                <%= link_to "Sign up", new_user_registration_path, class:"nav-link" %>
-              </li>
-            <% end %>
-          <!--li class="nav-item"-->
-          <!--/li-->
-        </ul>
+        <% end %>
+        <!--li class="nav-item"-->
+        <!--/li-->
+      </ul>
     </div>
   </div>
 </div>
