--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -2,10 +2,12 @@
   <div class="dashboard-container">
     <h3 class="text-center mb-0">My cars</h3>
     <div class="dashboard-card w-100 d-flex">
-      <% @cars.each do |car| %>
-        <div class="swipe-card" style="background-image: linear-gradient(to top, rgba(255,255,0,0), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1591552149543-0f98a83e9bcb?ixlib=rb-1.2.1&ixid=MnwxM[…]90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1232&q=80')">
+      <% @mycars.each do |car| %>
+        <div class="swipe-card" style="background-image: linear-gradient(to top, rgba(0,0,0,0.2), rgba(0,0,0,0.5)), url(<%= car.photo.url %>)">
           <h5 class="card-brand"><strong><%= car.brand  %></strong></h5>
           <p class="card-model"><%= car.model  %></p>
+          <p class="card-model"><%= car.price  %>€ / day</p>
+          <%= link_to "Show car", car_path(car),class: "btn btn-primary" %>
         </div>
       <% end %>
     </div>
@@ -13,21 +15,27 @@
   <div class="dashboard-container">
     <h3 class="text-center mb-0">My rentals</h3>
     <div class="dashboard-card w-100 d-flex">
-      <% @cars.each do |car| %>
-        <div class="swipe-card" style="background-image: linear-gradient(to top, rgba(255,255,0,0), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1591552149543-0f98a83e9bcb?ixlib=rb-1.2.1&ixid=MnwxM[…]90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1232&q=80')">
-          <h5 class="card-brand"><strong><%= car.brand  %></strong></h5>
-          <p class="card-model"><%= car.model  %></p>
+      <% @myrentals.each do |rental| %>
+        <div class="swipe-card" style="background-image: linear-gradient(to top, rgba(0,0,0,0.2), rgba(0,0,0,0.5)), url(<%= rental.car.photo.url %>)">
+          <h5 class="card-brand"><strong><%= rental.car.brand  %></strong></h5>
+          <p class="card-model"><%= rental.car.model  %></p>
+          <p class="card-model"><strong>Rental begin: </strong> <%= rental.rental_begin %></p>
+          <p class="card-model"><strong>Rental end: </strong> <%= rental.rental_end %></p>
+          <p class="card-model"><strong>Price: </strong> <%= rental.car.price * ((rental.rental_end - rental.rental_begin).to_i) %>€</p>
         </div>
       <% end %>
     </div>
   </div>
   <div class="dashboard-container">
-    <h3 class="text-center mb-0">My rent requests</h3>
+    <h3 class="text-center mb-0">Rentals of my cars</h3>
     <div class="dashboard-card w-100 d-flex">
-      <% @cars.each do |car| %>
-        <div class="swipe-card" style="background-image: linear-gradient(to top, rgba(255,255,0,0), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1591552149543-0f98a83e9bcb?ixlib=rb-1.2.1&ixid=MnwxM[…]90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1232&q=80')">
-          <h5 class="card-brand"><strong><%= car.brand  %></strong></h5>
-          <p class="card-model"><%= car.model  %></p>
+      <% @rentalsofmycar.each do |rental| %>
+        <div class="swipe-card" style="background-image: linear-gradient(to top, rgba(0,0,0,0.2), rgba(0,0,0,0.5)), url(<%= rental.car.photo.url %>)">
+          <h5 class="card-brand"><strong><%= rental.car.brand  %></strong></h5>
+          <p class="card-model"><%= rental.car.model  %></p>
+          <p class="card-model"><strong>Rental begin: </strong> <%= rental.rental_begin %></p>
+          <p class="card-model"><strong>Rental end: </strong> <%= rental.rental_end %></p>
+          <p class="card-model"><strong>Revenue: </strong> <%= rental.car.price * ((rental.rental_end - rental.rental_begin).to_i) %>€</p>
         </div>
       <% end %>
     </div>
