tweeked show page and seed generated

--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -2,6 +2,7 @@
   <%= f.input :brand %>
   <%= f.input :model %>
   <%= f.input :price %>
+  <%= f.input :description %>
   <%= f.input :photo, as: :file %>
   <%= f.submit %>
 <% end %>
