--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -2,7 +2,7 @@
   <div class="cards-container" >
     <% @cars.each do |car| %>
       <%= link_to car_path(car), class: "card", style: "width: 18rem" do %>
-        <%= image_tag "#{rand(9)}.jpg", class: 'card-img-top', id: 'identifier', style: 'width: 280px; height: 200px' %>
+        <img src="<%= car.photo.url %>" class='card-img-top' id='identifier' style='width: 280px; height: 200px'>
         <h5 class="card-title"><strong><%= car.brand  %></strong></h5>
         <p class="card-text"><%= car.model  %></p>
         <div class="d-flex mt-2">
