--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,11 +1,14 @@
-<div class="container sticky_footer pt-3 ">
+<div class="container sticky_footer pt-3 justify-content-middle ">
   <h1><%= @car.brand %>, <%= @car.model %></h1>
-  <div class="d-flex big-pic">
-    <img src="https://images.unsplash.com/photo-1521657142174-c7353dc830cd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80">
+  <div class="row justify-content-center">
+    <div class="d-flex big-pic col-12 col-sm-8">
+      <img src="<%= @car.photo.url %>">
+    </div>
+    <div class="col-12 col-sm-4">
+      <h2>Description</h2>
+      <p><%= @car.description %></p>
+      <%= render :partial => 'booking', locals: { rental: @rental } %>
+      <%# <%= render :partial => 'carousel', locals: { car: @car } %>
+    </div>
   </div>
-
-  <p><%= @car.description %></p>
-  <%= render :partial => 'booking', locals: { rental: @rental } %>
-  <%= render :partial => 'carousel', locals: { car: @car } %>
-
 </div>
