--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,5 +1,6 @@
 .dashboard-container {
-  height: calc((100vh - 156px) / 3);
+  // height: calc((100vh - 156px) / 3);
+  height: 400px;
 }
 
 .dashboard-card {
