--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -7,7 +7,7 @@
     <div class="col-12 col-sm-4">
       <h2>Description</h2>
       <p><%= @car.description %></p>
-      <%= render :partial => 'booking', locals: { rental: @rental } %>
+      <%= render :partial => 'booking', locals: { car: @car, rental: @rental } %>
       <%# <%= render :partial => 'carousel', locals: { car: @car } %>
     </div>
   </div>
