--- a/app/assets/stylesheets/pages/_car-index.scss
+++ b/app/assets/stylesheets/pages/_car-index.scss
@@ -1,23 +1,26 @@
 .cards-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px;
-
 }
 
 .card {
   display: flex;
-  padding: 5px;
   align-items: center;
   border-radius: 5px;
   transition: transform 0.2s ease;
-  text-decoration: none
+  text-decoration: none;
+  margin-top: 50px;
+
 }
 
 .card-img-top {
   width: 100%;
   height: 15vw;
   object-fit: fill;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .card:hover {
