--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,8 +2,8 @@
 
 // For example:
 $red: #8d1f21;
-$blue: #234c8a;
-$yellow: #ffc65a;
+$blue: #355070;
+$yellow: #f5c264;
 $orange: #e67e22;
 $green: #1edd88;
 $gray: #0e0000;
