--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -4,5 +4,5 @@
   <%= f.input :price %>
   <%= f.input :description %>
   <%= f.input :photo, as: :file %>
-  <%= f.submit %>
+  <%= f.submit class: "btn btn-primary" %>
 <% end %>
