--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -7,6 +7,7 @@
     <div class="col-12 col-sm-4">
       <h2>Description</h2>
       <p><%= @car.description %></p>
+      <h4><strong>Price : </strong> <%= @car.price %>€ / day</h4>
       <%= render :partial => 'booking', locals: { car: @car, rental: @rental } %>
       <%# <%= render :partial => 'carousel', locals: { car: @car } %>
     </div>
