changed home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,18 @@
-<div class = "container-fluid sticky_footer home-banner d-flex align-items-center  justify-content-center">
+<div class = "container-fluid sticky_footer-banner home-banner d-flex align-items-center  justify-content-center">
   <div class="content-banner d-flex flex-column align-items-center ">
     <h1 >Search an old car you'd like!</h1>
     <%= link_to "Check our offers!", cars_path, class:"btn btn-primary btn-lg"  %>
   </div>
+</div>
+<div class="container justify-content-center">
+  <div class="row justify-content-evenly">
+    <div class="col-4 mt-5">
+        <h3 class="text-center">Looking for a unique retro self drive experience?</h3>
+        <p class="text-center">If you are looking for self drive classic car hire then you've come to the right place. Many car enthusiasts dream of owning their own classic or vintage car but simply don’t have the money to do so. Why not hire a self drive classic car and get the same thrill? Drive my Car offers a great collection of classic, iconic, vintage and modern cars available for self drive hire to give car lovers the opportunity to take their dream car for a spin. Through our sites you can experience all the thrill and excitement of getting behind the wheel of your dream ride for as long as you wish. Browse all our self drive vehicles, rent, and drive!</p>
+      </div>
+      <div class="col-4 mt-5">
+        <h3 class="text-center">What is it that we do?</h3>
+        <p class="text-center">If you are looking for self drive classic car hire then you've come to the right place. Many car enthusiasts dream of owning their own classic or vintage car but simply don’t have the money to do so. Why not hire a self drive classic car and get the same thrill? Drive my Car offers a great collection of classic, iconic, vintage and modern cars available for self drive hire to give car lovers the opportunity to take their dream car for a spin. Through our sites you can experience all the thrill and excitement of getting behind the wheel of your dream ride for as long as you wish. Browse all our self drive vehicles, rent, and drive!</p>
+      </div>
+    </div>
 </div>
