--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  height: 50px;
   padding: 0px 50px;
   color: rgba(0, 0, 0, 0.3);
 }
@@ -25,10 +25,13 @@
   color: #d23333;
 }
 .sticky_footer {
-  min-height: calc(100vh - 156px);
+  min-height: calc(100vh - 100px);
+}
+
+.sticky_footer-banner {
+  min-height: calc(100vh - 56px);
 }
 
 .quotation-mark {
   font-size: 12px;
-  
 }
