--- a/app/assets/stylesheets/pages/_car-index.scss
+++ b/app/assets/stylesheets/pages/_car-index.scss
@@ -18,7 +18,7 @@
 .card-img-top {
   width: 100%;
   height: 15vw;
-  object-fit: fill;
+  object-fit: cover;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
