final tweaks done

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,9 +1,11 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon d-flex flex-row bd-highlight">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon d-flex flex-row bd-highlight sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
       <%= image_tag ("carlogo1.jpg")%>
     </a>
-    <h3><strong>Drive my Car</strong></h3>
+    <div class="flex-grow-1">
+      <h3><strong>Drive my Car</strong></h3>
+    </div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
